# something.chat

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  justfile  package.json  pnpm-lock.yaml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/app/: config.py  db.py  llm.py  main.py  models.py  redis_client.py
apps/api/app/routers/: chat.py  conversations.py  logs.py  metrics.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 001_initial.py
apps/api/tests/: conftest.py  test_chat.py  test_conversations.py  test_logs.py
apps/web/: .cta.json  .gitignore  Dockerfile  README.md  package.json  pnpm-lock.yaml  wrangler.jsonc
apps/web/src/: routeTree.gen.ts  router.tsx  server-env.ts  styles.css
apps/web/src/__tests__/: sse-consumer.test.ts
apps/web/src/components/chat/: conversation.tsx  message-assistant.tsx  message-user.tsx  message.tsx
apps/web/src/components/common/: model-selector.tsx
apps/web/src/components/prompt-kit/: chat-container.tsx  loader.tsx  message.tsx  prompt-input.tsx  scroll-button.tsx
apps/web/src/components/ui/: avatar.tsx  button.tsx  input.tsx  popover.tsx  scroll-area.tsx  separator.tsx  sonner.tsx  textarea.tsx  tooltip.tsx
apps/web/src/routes/: __root.tsx  index.tsx
apps/web/src/routes/c/: $conversationId.tsx
docs/: architecture.md  spec.md
infra/: docker-compose.yml
scripts/: run-web.sh
workers/ingest/: Dockerfile  pyproject.toml
workers/ingest/app/: config.py  db.py  main.py  processor.py  redact.py
workers/ingest/tests/: test_processor.py  test_redact.py
